feat: OpenWeather API 호출 속도 제어 기능 구현
- OpenWeatherMap API는 분당 60회라는 호출 제한이 있음
  - 때문에 rate limit에 걸리지 않기 위해 bucket4j 라이브러리를 사용해 트래픽을 제한함
- OpenWeatherRateLimitService를 추가하여 OpenWeatherMap API 호출 속도를 제어하는 기능을 구현함. Token Bucket 알고리즘을 사용하여 API 호출의 효율성을 높임
- 북마크의 개수가 60개 이상이라면 토큰의 개수가 부족하기 때문에 한 번에 응답을 받지 못함
  - 대신 받아온 일부분 북마크 데이터만으로 결과를 반환